c1/freenodes
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/freenodes/src/proof.c:549:6: error: expected expression
if ( struct node ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/freenodes/src/obj/proof.o] Error 1
